--- a/index.html
+++ b/index.html
@@ -523,8 +523,10 @@ function formSectionDisable(section,value) {
 
 <script>
 $( function() {
+	var camera = "A4872";
 	var frameCounts = [0,20,30,40,50,7,70,80,90,10000,10,20,30,40,50,60,70,80,90,100,10,20,30,40,50,60,70,80,90,100,10];
 
+	var cal = {};
 
 	var dateFormat = "mm/dd/yy";
 	var dateStart = new Date();
@@ -539,13 +541,46 @@ $( function() {
 				var selectable = true;
 				var classname = "";
 				var title = "";
-				if (date.getMonth() == dateStart.getMonth()) {
-					title = "" + frameCounts[date.getDate() - 1] + " images";
-					if (date.getDate() > new Date().getDate()) {
-						title = "";
-					}
+				var today = new Date();
+				if (date.getFullYear() == today.getFullYear && date.getMonth() >= today.getMonth() && date.getDate() > today.getDate()) {
+					return [selectable, classname, title];
+				}
+				var month = "" + date.getFullYear() + "-" + pad_zero(2, "" + (date.getMonth() + 1));
+				var images = cal[month];
+				if (images) {
+					title = "" + images[date.getDate() - 1] + " images";
 				}
 				return [selectable, classname, title];
+			},
+			onChangeMonthYear: function(year, month, obj) {
+				function cal_update(data) {
+					cal[data.date] = data.images;
+				};
+
+				var date = month_printable(year, month);
+				if (!cal[date]) {
+				$.ajax({
+					url:	"getImageCount.php",
+					dataType: "json",
+					data:	{
+						"camera": camera,
+						"date":  date
+					}
+				}).done(cal_update);
+				}
+	
+				date = month_printable(year, month-1);
+				if (!cal[date]) {
+					$.ajax({
+						url:	"getImageCount.php",
+						dataType: "json",
+						data: {
+							"camera": camera,
+							"date": month_printable(year, month-1)
+						}
+					}).done(cal_update);
+				}
+				return true;
 			}
 		}),
 	$stopDate = $("#video_stop_date")
@@ -557,6 +592,16 @@ $( function() {
 		});
 	$startDate.datepicker("setDate", dateStart);
 	$stopDate.datepicker("setDate", "+0d");
+
+
+	function pad_zero(size, s) {
+		while (s.length < (size || 2)) { s = "0" + s; };
+		return s;
+	};
+
+	function month_printable(year, month) {
+		return "" + year + "-" + pad_zero(2, "" + month);
+	}
 });
 </script>
 
