Changed Caption to Title...

--- a/index.html
+++ b/index.html
@@ -242,9 +242,10 @@ $('#timelapseGenerator').formValidation({
 				<option>1/30</option>
 				<option>1/40</option>
 				<option>1/50</option>
+				<option>
 			</select>
-			<label for="video_caption">Caption</label>
-			<input name="video_caption" id="video_caption" type="text" class="pure-u-1-2" />
+			<label for="video_title">Title</label>
+			<input name="video_title" id="video_title" type="text" class="pure-u-1-2" />
 		</div>
 
 		<!-- Start Date/Time -->
